# winter-2024-team-2aka8

./: README.md
148Tutorials/: GPSconfiguration.md  LaneFollowingAdvice.md  OpenCV22%FailureFix.md  SFTP_Instructions.md  csvtest.rtf  oakderrorfix.md  vescdrivefastfix.md
projects/: NodeCreationNotes.rtf
projects/localization2_ws/install/: local_setup.sh  setup.sh
projects/localization_ws/devel/: .catkin
projects/ros1_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
projects/ros2_ws/: core
projects/ros2_ws/gpt_path_2/: metadata.yaml
projects/ros2_ws/install/: local_setup.sh  setup.bash
projects/ros2_ws/mycar/: ChatGPS.csv  donkey_path2.csv  donkey_path3.csv  donkey_path4.csv  (+6 more)
projects/sensor2_ws/src/imu/artemis_openlog/src/razor_imu_9dof/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/install/: setup.ps1  setup.sh  setup.zsh
ros2_ws/mycar/: #manage.py#  ChatGPS2.csv  donkey_path1.csv  gpsheart.csv  myconfig.py.save
ucsd_robocar_basics2_pkg/: #roomexploring.py#  chatgpt_drive_node.py  gemini_drive_node.py~  lidar_braking_node.py  lidar_braking_node.py~
ucsd_robocar_basics2_pkg/donkey_paths/: chat_gps.csv  path_data(4).csv  path_data(5).csv  path_data(6).csv  path_data(8).csv
ucsd_robocar_hub2 copy/ucsd_robocar_actuator2_pkg/: README.md  setup.py
ucsd_robocar_hub2 copy/ucsd_robocar_basics2_pkg/: README.md  setup.cfg  setup.py
ucsd_robocar_hub2 copy/ucsd_robocar_control2_pkg/: setup.py
ucsd_robocar_hub2 copy/ucsd_robocar_nav2_pkg/: README.md  setup.py
ucsd_robocar_hub2 copy/ucsd_robocar_path2_pkg/: package.xml  setup.py
(+216 files in other folders)
