<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>razor_imu_9dof</name>
  <version>0.0.0</version>
  <description>razor_imu_9dof is a package that provides a ROS2 driver for the Sparkfun OpenLog Artemis, 9DoF Razor IMU M0, 9DOF Razor IMU and 9DOF Sensor Stick. It also provides Arduino firmware that runs on the board, and which must be installed on it for the system to work. A node which displays the attitude (roll, pitch and yaw) of the board (or any IMU) is provided for testing.</description>
  <maintainer email="omadityasiddharth123@gmail.com">Siddharth Saha</maintainer>
  <license>BSD</license>
  <license>GPLv3</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>python3-serial</depend>
  <depend>tf2</depend>
  <depend>tf_transformations</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
